# streamsight-ui

./: .gitignore  README.md
.github/: pull_request_template.md
.github/workflows/: ruff.yml
client/: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts
client/public/: datasets-logo.avif
client/src/: api.ts  constants.ts  enum.ts  login.ts  types.ts
client/src/app/: layout.tsx  middleware.ts  page.tsx
client/src/app/stream/: page.tsx
client/src/providers/: AuthProvider.tsx
client/tests/: create-stream.spec.ts  datasets.spec.ts  example.spec.ts  getting-started.spec.ts  home.spec.ts  navbar.spec.ts
client/tests-examples/: demo-todo-app.spec.ts
client/utils/supabase/: middleware.ts
server/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml  test_main.py
server/migrations/: constants.py
server/migrations/scripts/: amazon_movie.py  lastfm2k.py  movielens100k.py
server/migrations/utils/: preprocess_df.py
server/routers/: algorithm_management.py  data_handling.py  metrics.py  predictions.py  stream_management.py
server/src/: constants.py  database.py  db_utils.py  events.py  main.py  settings.py
server/src/models/: algorithm_management_models.py  metadata.py  metrics_models.py  stream_management_models.py
server/src/routers/: algorithm_management.py  authentication.py  data_handling.py  metrics.py  predictions.py  stream_management.py
server/src/supabase_client/: authentication.py  client.py
server/src/utils/: db_utils.py  string_utils.py  uuid_utils.py
server/tests/: test_main.py
server/tests/routers/: test_algorithm_management.py  test_data_handling.py  test_metrics.py  test_predictions.py  test_stream_management.py
server/tests/utils/: test_string_utils.py  test_uuid_utils.py
(+27 files in other folders)
