[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.6.2",
    "fastapi[standard]>=0.115.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.9",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.9",
    "sqlmodel>=0.0.22",
    "streamsight>=0.2.10",
    "supabase>=2.9.0",
]
