[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "coverage>=7.6.2",
    "fastapi[standard]>=0.115.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "psycopg2-binary>=2.9.9",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.6.9",
    "sqlmodel>=0.0.22",
    "streamsight",
    "supabase>=2.9.0",
]

[tool.uv.sources]
streamsight = { git = "https://github.com/suenalaba/streamsightv2.git" }
