[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "coverage>=7.6.2",
    "fastapi[standard]>=0.115.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "psycopg2-binary>=2.9.9",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.6.9",
    "sqlmodel>=0.0.22",
    "streamsightv2>=0.1.4",
    "supabase>=2.9.0",
]

[tool.coverage.run]
omit = [
    # omit coverage of tests directory
    "*/tests/*",
    # # omit DAO files as these are covered by E2E tests
    "database.py",
    "db_utils.py",
    # omit supabase files as these are covered by E2E tests
    "*/supabase_client/*",
]
